--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -548,8 +548,7 @@ body .footer-box .get-in-touch .right-box-get .span-right-box-get {
 }
 body .footer-box .get-in-touch .input-name-lastname {
   padding-top: 120px;
-  display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
 }
 body .footer-box .get-in-touch .input-name-lastname .form-leave-comment {
   margin-top: 10px;
